# listing

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose-dev.yml  docker-compose.yml  heroku.yml  settings.toml
.github/workflows/: test.yaml
docker/: front.Dockerfile  model.Dockerfile
fetch/: .air.conf  .air.toml  .env  Dockerfile  database.go  estacoes.go  fetch_listings.go  fetch_listings_test.go  fetch_properties_test.go  go.mod  go.sum  list_locations.go  list_locations_test.go  main.go  request.go  settings.go  settings.toml  station.go  strucs.go  strucs_inputs.go  teste_api.http  utils.go
fetch-rust/: Cargo.toml  run.sh
fetch-rust/src/: args.rs  cfg.rs  db.rs  listings.rs  listings_insert.rs  listings_type.rs  listings_update.rs  location.rs  main.rs  properties.rs  request.rs
fetch/cmd/api/: .air.toml  main.go
fetch/cmd/tests/: fetch_properties_test.go  list_locations_test.go
fetch/database/: auto_migrate.go  connect.go  get_transport_systems.go  reset_active.go  store_property.go  store_stations.go
fetch/models/: line_test.go  property.go  search_config.go  station.go  station_test.go  transport_system.go  transport_system_test.go
fetch/pkg/controller/middlewares/: conf.go  health.go  listings.go  locations.go
fetch/pkg/controller/routes/: routes.go
fetch/pkg/database/: auto_migrate.go  connect.go  database.go  reset_active.go  store_property.go  store_stations.go
fetch/pkg/domain/model/: model.go
fetch/pkg/domain/property/: fetch_properties.go  get_or_request.go  location.go  property.go  request.go
fetch/pkg/domain/station/: create_stations.go  fetch_stations.go  fetch_stations_test.go  get_transport_systems.go
fetch/pkg/models/: line.go  property.go  search_config.go
fetch/pkg/utils/: settings.go  utils.go
fetch/property/: fetch_properties.go  list_locations.go  property.go  request.go  strucs_inputs.go
fetch/station/: create_stations.go  fetch_stations.go  fetch_stations_test.go  get_transport_systems.go  line.go  line_test.go  station.go  station_test.go  transport_system.go  transport_system_test.go
fetch/tests/: main.go  teste.py
fetch/utils/: settings.go  utils.go
front/: .env  Dockerfile  main.py  pyproject.toml  requirements.txt  settings.toml
front/front/: __init__.py  settings.py
front/front/assets/: styles.css
front/front/components/: box.py  carousel.py  location.py
front/front/pages/: __init__.py  map.py  navbar.py  sidebar.py  table.py
front/tests/: test_front.py
model/: Dockerfile  Makefile  pyproject.toml  requirements.txt  settings.toml  teste_api.http
model/analysis/: 0.exploring.ipynb  0.simple_model.ipynb  0.simple_model_sale.ipynb  1.igpm_study.ipynb
model/api/: __init__.py  schemas.py
model/data/: igpm.py
model/experiments/: experiment.py  opt_lgbm.py  opt_tree.py  polar.py  run_models.py
model/experiments/api/: Makefile  locustfile.py  readme.md  train_simple_model.py  validate_api.py
model/experiments/api/fastapi/: Makefile  api.py
model/experiments/api/flask/: Makefile  api.py
model/experiments/api/go/: Makefile  go.mod  teste.http
model/experiments/api/go/cmd/goroutines/: main.go
model/experiments/api/go/cmd/simple/: main.go
model/experiments/api/go/model/: model.go
model/model/: extract.py  settings.py
model/model/versions/rental/: model_2023_08_15_20_28_01.pkl  train.py
model/model/versions/sale/: model_2023_08_15_20_27_55.pkl  train.py
model/notebook/: 01.explore.ipynb  01.explore.qmd
