[package]
name = "fetch-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
env_logger = "0.11.3"
log = "0.4.21"
reqwest = "0.12.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.12"
url = "2.5.0"
