[package]
name = "fetch-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
dotenv = "0.15.0"
futures = "0.3.30"
log = "0.4.21"
rand = "0.8.5"
reqwest = "0.12.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
serde_json = "1.0.114"
simple_logger = "4.3.3"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono", "macros"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.12"
url = "2.5.0"

[dev-dependencies]
serde_path_to_error = "0.1.16"
