[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["Douglas Braga <30268535+dobraga@users.noreply.github.com>"]
packages = [
    { include = "data", from = "./" },
    { include = "model", from = "./" },
    { include = "experiments", from = "./model" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scikit-learn = "^1.0.2"
python-dotenv = "^0.20.0"
pandas = "^1.4.2"
dynaconf = "^3.1.11"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
numpy = "1.23"
pydantic = "^1.10.4"
category-encoders = "^2.5.1"
psycopg2-binary = "^2.9.5"
lightgbm = "3.3.4"
joblib = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
ipykernel = "^6.13.0"
mypy = "^0.950"
autopep8 = "^2.0.1"
seaborn = "^0.12.0"
plotly = "^5.10.0"
nbformat = "^5.6.0"
nbclient = "^0.6.8"
altair = "^4.2.0"
optuna = "^3.0.5"
SQLAlchemy = "^1.4.46"
rich = "^13.0.1"
lightgbm = "^3.3.4"
xgboost = "^1.7.3"
nbconvert = "^7.2.9"
m2cgen = "^0.10.0"
requests = "^2.28.2"
locust = "^2.15.0"
flask = "^2.2.3"
gunicorn = "^20.1.0"
tensorflow = "^2.12.0"
optbinning = "^0.17.3"
lxml = "^4.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
